--- a/web/assets/css/styles.css
+++ b/web/assets/css/styles.css
@@ -2634,7 +2634,76 @@ table.table .avatar {
 }	
 .modal form label {
     font-weight: normal;
-}	
+}
+
+/*---------------------
+  Profile page
+-----------------------*/
+
+.sub-nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style-type: none;
+}
+
+.sub-nav .sub-nav__item a {
+    padding: 30px 80px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    color: #aaa;
+    cursor: pointer;
+    transition: background .1s ease-in-out;
+}
+
+.sub-nav .sub-nav__item a.active {
+    color: #e93c41;
+    border-bottom: 2px solid #e93c41; 
+}
+
+.sub-nav .sub-nav__item a:hover {
+    background-color: #f4919433;
+}
+
+.sub-nav .sub-nav__item a:active {
+    background-color: #fc767a75;
+}
+
+.card-raised {
+    line-height: 1.25rem;
+    color: #000;
+}
+
+.card .card-title {
+    font-size: 1.25rem;
+    line-height: 2rem;
+    font-weight: 500;
+    letter-spacing: 0.0125em;
+    margin-bottom: 0;
+}
+
+.card .card-subtitle {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 500;
+    letter-spacing: 0.0071428571em;
+    margin-bottom: 0;
+    opacity: 0.6;
+}
+
+.card .caption {
+    font-size: 0.75rem;
+    font-style: italic;
+    line-height: 1.25rem;
+    letter-spacing: 0.0333333333em;
+}
+
+.text-end {
+    text-align: right !important;
+}
 
 /*--------------------------------- Responsive Media Quaries -----------------------------*/
 
