--- a/web/assets/css/styles.css
+++ b/web/assets/css/styles.css
@@ -2705,6 +2705,112 @@ table.table .avatar {
     text-align: right !important;
 }
 
+/*---------------------
+  toast
+-----------------------*/
+
+#toast{
+    position: fixed;
+    top: 32px;
+    right: 32px;
+    z-index: 999999;
+}
+
+.toast-wrapper{
+    display: flex;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 2px;
+    padding: 20px 0;
+    border-left: 3px solid;
+    min-width: 400px;
+    max-width: 450px;
+    box-shadow: 0 5px 8px rgba(0,0,0,0.08);
+    transition: all linear .3s;
+}
+
+@keyframes slideInLeft {
+    from{
+        transform: translateX(calc(100% + 32px));
+    }
+    to{
+        transform: translateX(0);
+    }
+}
+
+@keyframes fadeOut {
+    to{
+        opacity: 0;
+    }
+}
+
+.toast--success{
+    border-color:  #71be34;
+}
+
+.toast--success .toast__icon{
+    color:  #71be34;
+}
+
+.toast--info{
+    border-color: #ffb702;
+}
+
+.toast--info .toast__icon{
+    color: #ffb702;
+}
+
+.toast--failed{
+    border-color: #ff623d;
+}
+
+.toast--failed .toast__icon{
+    color: #ff623d;
+}
+
+
+.toast + .toast{
+    margin-top: 16px;
+}
+
+.toast__icon{
+    font-size: 24px;
+}
+
+.toast__icon,
+.toast__close{
+    padding: 0 16px;    
+    
+}
+
+.toast__content{
+    flex-grow: 1;
+}
+
+.toast__title{
+    font-size: 16px;
+    font-weight: 600;
+    color: #333;
+}
+
+.toast__msg{
+    font-size: 14px;
+    color: #888;
+    margin-top: 6px;
+    line-height: 1.5;
+}
+
+.toast__close{
+    font-size: 20px;
+    color: rgba(0,0,0,0.3);
+}
+
+.toast__close:hover{
+    cursor: pointer;
+    opacity: .8;
+}
+
+
 /*--------------------------------- Responsive Media Quaries -----------------------------*/
 
 @media only screen and (min-width: 1600px) and (max-width: 1900px) {
