_fix tùm lum bug #3

--- a/web/assets/css/styles.css
+++ b/web/assets/css/styles.css
@@ -412,7 +412,8 @@ ol {
     display: none;
 }
 
-.header__menu ul li a {
+.header__menu ul li a,
+.header__right ul li a{
     font-size: 15px;
     text-transform: uppercase;
     color: #111111;
