_fix tùm lum bug #7

--- a/web/assets/css/styles.css
+++ b/web/assets/css/styles.css
@@ -1603,6 +1603,11 @@ ol {
     margin-bottom: 10px;
 }
 
+.product__details__button .cart-btn.disabled {
+    background: #ccc;
+    pointer-events: none;
+}
+
 .product__details__button ul {
     float: left;
 }
